Fixing aligning of restaurants-list

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,10 +146,15 @@ nav h1 a {
 	overflow: auto;
 	width: %100;
 	display: flex;
-	align-content: center;
-	justify-content: space-between;
+	justify-content: space-around;
 	flex-wrap: wrap;
 }
+
+#restaurants-list:after {
+  content: "";
+  flex-basis: 63%;
+}
+
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
@@ -159,7 +164,6 @@ nav h1 a {
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
-	float: left;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
